--- a/css/style.css
+++ b/css/style.css
@@ -1,52 +1,112 @@
 /**********MAIN STYLES**********/
+* {
+	font-family: 'Montserrat', sans-serif;
+
+}
 
 body {
 	width: 100%;
-	margin: 0;
+	margin: 0 auto;
 }
 header {
 	margin: 0;
+	padding: 2px 0;
 	width: 100%;
-	background: black;
+	background: #181918;
 	color: white;
 }
 nav {
 	height: 30px;
 	text-align: center;
-	background: gray;
-	padding-top: 10px;
+	background: #181918;
+	padding-top: ;
 }
+nav a {
+	transition-duration: 1.0s;
+	background: #4C4C4C;
+	display: inline-block;
+	margin: 0 3px 3px;
+	padding: 4px;
+	border: 1px solid black;
+	font-weight: 300;
+	font-style: italic;
+	text-decoration: none;
+	color: white;
+	box-shadow: none;
+}
+nav a:hover {
+	transition-duration: 1.0s;
+	box-shadow: 1px 1px .3em white;
+
+}
+nav a.active {
+	transition-duration: 1.0s;
+	padding: 5px;
+	border: 1.5px solid black;
+	font-weight: 400;
+	font-style: italic;
+}
+
 .heading {
-	margin: 0;
+	margin-bottom: 10px;
 	text-align: center;
-}
-
-/**********INDEX STYLES*************/
-
-#index_main {
-	width: 90%;
 }
 
 ul {
 	list-style-type: none;
+	width: 100%;
+	padding: 0;
+	margin: 0 auto;
 }
 
-ul.prior_job {
-	clear: both;
-}
+/**********INDEX STYLES*************/
 
-.resume_exp_desc {
+
+ul#resume {
+	width: 100%;
+	padding: 0 15px;
+}
+ul#experience {
+	width: 100%;
+}
+ul#education {
+	width: 100%;
+	font-weight: 400;
+	margin: 0 10%;
+}
+li.resume_section {
+	font-weight: 800;
+}
+li.resume_section p {
+	font-weight: 400;
+	margin: 5px 10%;
+}
+li.job_title {
+	display: inline-block;
+	font-size: 24px;
+	font-weight: 400;
+	margin: 10px auto 10px 25px;
+}
+p.role_desc {
+	display: inline-block;
+	margin-left: 30px;
 	width: 35%;
+	font-size: 18px;
 }
 img.project_image {
+	max-width: 400px;
 	float: right;
+	border: 3px solid black;
+	margin-right: 70px;
 }
-
+h2 {
+	margin: 0;
+}
 
 /**********ABOUT ME STYLES**********/
 
-#about_me_main {
-	width: 80%;
+main#about_me_main {
+	width: 90%;
 	margin: 0 auto;
 	clear: both;
 }
@@ -57,6 +117,7 @@ img.project_image {
 }
 #main_headline {
 	text-align: center;
+	margin: 18px auto 8px;
 }
 #bio_text {
 	display: inline-block;
@@ -69,6 +130,13 @@ img.project_image {
 	width: 250px;
 	margin: 10px auto;
 	padding: 10px 10px 10px 10px;
+	border: 3px solid black;
+	transition-duration: 1.0s;
+	border-radius: 50%;
+}
+#headshot:hover {
+	transition-duration: 0.7s;
+	border-radius: 12%;
 }
 #section {
 	margin: 10px auto;
